--- a/simple-api/.github/workflows/main.yml
+++ b/simple-api/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: '17'
+
      #finally build your app with the latest command
       - name: Build and test with Maven
         run: mvn clean verify
