--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,7 @@
 # Define job to build and publish Docker images for multiple components
 build-and-push-docker-images:
-  needs: CI devops 2023
+  needs: test-backend
+  if: ${{ need.test-backend.result == 'success' }}
   # run only when code is compiling and tests are passing
   runs-on: ubuntu-22.04
 
