--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,14 +3,15 @@ on:
   #to begin you want to launch this job in main and develop
     workflow_run:
       workflows: ["CI devops 2023"]
-      branches: [main]
+      types:
+        - completed
 
 jobs:
   # Define job to build and publish Docker images for multiple components
   build-and-push-docker-images:
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-22.04
-
+    needs: test-backend
     # steps to perform in job
     steps:
       - name: Login to DockerHub
