--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,6 +29,7 @@ jobs:
           context: ./simple-api
           # Note: tags have to be all lower-case
           tags:  ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-simple-api:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
 
 
       - name: Build and push database image
@@ -36,6 +37,7 @@ jobs:
         with:
           context: ./database
           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-database:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
 
 
       - name: Build and push httpd image
@@ -43,4 +45,5 @@ jobs:
         with:
           context: ./http-server
           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-http:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
 
